src/style.css
@font-face {
  font-family: 'Droid Sans Mono';
  src: url('./DroidSansMono.ttf');
  font-weight: 400;
}

/* Reset */
html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, b, ul, ol, li, section {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  position: relative;
  -webkit-box-sizing: border-box; 
  -moz-box-sizing: border-box; 
  box-sizing: border-box; 
}

::selection {background: rgba(255,0,0,0.15)}
::-moz-selection {background: rgba(255,0,0,0.15)}

body {
  font: 400 1em / 1.5em 'Droid Sans Mono', monospace;
  color: #212121;
  text-rendering: optimizeLegibility;
}

/* All the elements will scale because their dimensions are declared in ems */
@media all and (max-width: 960px) and (min-width: 600px) {
  body {font-size: 1em}  
}

@media all and (max-width: 2000px) and (min-width: 960px) {
  body {font-size: 1.1em}  
}

/* Holds the text the user types */
#input {
  position:fixed; /* Position fixed stops weird scrolling to top */
  top: 0;
  left: -200px;
  width: 100px;
  height: 100px;
  overflow: hidden;
}

/* Renders the text the user has typed */
#output {
  margin: 0 auto;
  padding: 2em 3em;
  max-width: 50em;
}

#output:focus {
  border: none;
  outline: none;
}

/* Custom caret */
#output p:last-child:after {
  content: "\2007";
  background: #ffc820;
  width: 0.25em;
  position: relative;
  left: -1px;
  display: inline-block;
  -webkit-animation: blink 0.5s ease-in-out 0.25s infinite alternate;
}

/* Fringe to make scrolling less hidden */
#output:after {
  width: 100%;
  height: 2em;
  content: " ";
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background: -moz-linear-gradient(top, rgba(247,246,242,1) 0%, rgba(247,246,242,0) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,246,242,1)), color-stop(100%,rgba(247,246,242,0))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, rgba(247,246,242,1) 0%,rgba(247,246,242,0) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, rgba(247,246,242,1) 0%,rgba(247,246,242,0) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, rgba(247,246,242,1) 0%,rgba(247,246,242,0) 100%); /* IE10+ */
  background: linear-gradient(to bottom, rgba(247,246,242,1) 0%,rgba(247,246,242,0) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
}

/* Caret animation */
@-webkit-keyframes blink {
  0% {opacity:1}
  100% {opacity:0}
}

/* Custom styling 'deleted' text */
.strike::after {
  content: "";
  border-bottom: 0.15em solid #000;
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
}

